# harness-before

./: .gitignore  README.md  pyproject.toml
.abh/: roadmap.json
.abh/attractors/: attractor-abh-core.json
.abh/audits/: audit-013-json-output-and-errors.json  audit-014-readonly-mcp-server.json  audit-015-controlled-mcp-write-tools.json  audit-022-verification-failure-classification.json  audit-026-v0-3-release-prep.json  audit-028-agent-first-command-contract.json  audit-029-attractor-registry.json  audit-032-abh-init-active-attractor.json  audit-033-agent-contract-setup.json  audit-034-git-hooks-guardrails.json  audit-039-quality-signal-model.json  audit-040-drift-quality.json
.abh/memory/: mem-verify-record-serial-001.json  mem-verify-runner-recursion-001.json
.abh/plans/: plan-014-readonly-mcp-server.json  plan-015-controlled-mcp-write-tools.json  plan-016-verify-runner.json  plan-022-verification-failure-classification.json  plan-026-v0-3-release-prep.json  plan-028-agent-first-command-contract.json  plan-029-attractor-registry.json  plan-032-abh-init-active-attractor.json  (+4 more)
.deepseek/: instructions.md
.playwright-cli/: page-2026-05-22T07-06-11-204Z.yml
abh/: agent_setup.py  cli.py  commands.py  core.py  drift.py  hooks.py  init.py  mcp_server.py  models.py  plans.py  roadmap.py  storage.py  verifications.py
docs/: attractor-before-harness-detailed-design.md  attractor-before-harness-framework.md  attractor-before-harness-prd.md  attractor-before-harness-task-breakdown.md  development-roadmap.md  index.md  task-board.md  阶段规划.md
tests/: test_cli.py
(+117 files in other folders)
