[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abh"
version = "0.2.0"
description = "Attractor Before Harness CLI"
requires-python = ">=3.13"

[project.scripts]
abh = "abh.cli:main"

[tool.setuptools]
packages = ["abh"]

[tool.uv]
# uv 零依赖安装方式兼容性声明
# 本项目的 pyproject.toml 为标准 setuptools 格式，uv 可直接使用
